Wrapping up: Working with model documents

--- a/site/guide/model-documentation/working-with-model-documentation.qmd
+++ b/site/guide/model-documentation/working-with-model-documentation.qmd
@@ -82,11 +82,11 @@ This section describes how to work with model documentation in the {{< var valid
 
 ### Add or edit documentation
 
-1. From the **Document Overview**, jump to any section of the model documentation by selecting the relevant section you would like to view.
+1. From the **Document Overview**, jump to any section of the model documentation by clicking on the heading you would like to view.
 
 5. In any section of the documentation, click to add or edit content. 
 
-    You can now use the text editor functions to edit the content of the section. Whenever you make a change, an activity log entry is recorded under **Section activity** on the page, just below the section you are editing. 
+    Use the text editor functions to edit the content of the section. Whenever you make a change, an activity log entry is recorded under **Section activity** on the page, just below the section you are editing. 
 
 6. Save your edits as a revision:
 
