--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -34,7 +34,21 @@ Add or delete documents available on individual models in your inventory.
 
 6. Click **Create Document** to add the document to your model.
 
-## Delete documents
+## Edit model documents
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model or find your model by applying a filter or searching for it.[^9]
+
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document file.
+
+4. Jump to any section of the document by clicking on a heading you would like to view.
+
+4. In any section of the document, click to add or edit content.[^10]
+
+    Use the text editor functions to edit the content of the section.
+
+## Delete model documents
 
 ::: {.callout-important}
 Deletion of documents on models is permanent and cannot be undone.
@@ -42,7 +56,7 @@ Deletion of documents on models is permanent and cannot be undone.
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^9]
+2. Select a model or find your model by applying a filter or searching for it.[^11]
 
 3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents**.
 
@@ -51,6 +65,14 @@ Deletion of documents on models is permanent and cannot be undone.
 5. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select [**{{< fa trash-can >}} Delete**]{.red} to remove the document.
 
 6. After you confirm, the document type will be deleted from the model.
+
+## What's next
+
+Learn more about how to work with the default document types within the {{< var validmind.platform >}}:
+
+- [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+- [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)
+- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 
 
 <!-- FOOTNOTES -->
@@ -72,6 +94,11 @@ Deletion of documents on models is permanent and cannot be undone.
 [^8]: [Customize document templates](customize-document-templates.qmd)
 
 [^9]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^10]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
+
+[^11]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
 
 
 
