Wrapping up: Working with templates

--- a/site/guide/templates/_customize-document-templates.qmd
+++ b/site/guide/templates/_customize-document-templates.qmd
@@ -3,11 +3,12 @@
 
 1. Under Documents, select **Templates**.
 
-1. Select one of the tabs for the type of template you want to edit.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)] For example:
+1. Select one of the tabs for the type of template you want to edit:
 
-   - **Documentation** 
-   - **Validation Report**
-   - **Ongoing Monitoring**
+   - **Documentation**^[[Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)]
+   - **Validation Report**^[[Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)]
+   - **Ongoing Monitoring**^[[Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)]
+   - **Custom**^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
 1. Click the template to edit and on the template details page, select **{{< fa pencil >}} Edit Outline**. 
 
