--- a/site/guide/templates/_duplicate-template.qmd
+++ b/site/guide/templates/_duplicate-template.qmd
@@ -3,18 +3,20 @@ To duplicate an existing template and start with version one of that new templat
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under Documents, select **Templates**.
+1. Under Documents, select **Templates**.
 
-3. Select one of the tabs for the type of template you want to duplicate.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)] For example:
-   - **Documentation** 
-   - **Validation Report**
-   - **Ongoing Monitoring**
+1. Select one of the tabs for the type of template you want to duplicate:
 
-4. Click on the template to duplicate and on the template details page, select **{{< fa copy >}} Duplicate Template**. 
+   - **Documentation**^[[Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)]
+   - **Validation Report**^[[Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)]
+   - **Ongoing Monitoring**^[[Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)]
+   - **Custom**^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
-5. In the Duplicate Template modal that opens, give your copy a **[template name]{.smallcaps}** and a **[template description]{.smallcaps}**.
+1. Click on the template to duplicate and on the template details page, select **{{< fa copy >}} Duplicate Template**. 
 
-6. Click **Duplicate Template** to create a copy of your template.
+1. In the Duplicate Template modal that opens, give your copy a **[template name]{.smallcaps}** and a **[template description]{.smallcaps}**.
+
+1. Click **Duplicate Template** to create a copy of your template.
 
 Once duplicated, customize your new template to your needs, making it available for use with model documentation or validation reports.
 
@@ -26,15 +28,15 @@ To duplicate an existing template and start with version one of that new templat
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under Documents, select **Templates**.
+1. Under Documents, select **Templates**.
 
-3. Select one of the tabs for the [type of template you want to duplicate](/guide/templates/working-with-model-documents.qmd).
+1. Select one of the tabs for the [type of template you want to duplicate](/guide/templates/working-with-model-documents.qmd).
 
-4. Click on the template to duplicate and on the template details page, select **{{< fa copy >}} Duplicate Template**. 
+1. Click on the template to duplicate and on the template details page, select **{{< fa copy >}} Duplicate Template**. 
 
-5. In the Duplicate Template modal that opens, give your copy a **[template name]{.smallcaps}** and a **[template description]{.smallcaps}**.
+1. In the Duplicate Template modal that opens, give your copy a **[template name]{.smallcaps}** and a **[template description]{.smallcaps}**.
 
-6. Click **Duplicate Template** to create a copy of your template.
+1. Click **Duplicate Template** to create a copy of your template.
 
 Once duplicated, customize your new template to your needs, making it available for use with model documentation, validation reports, or ongoing monitoring reports.
 
