--- a/site/guide/templates/_view-document-templates.qmd
+++ b/site/guide/templates/_view-document-templates.qmd
@@ -3,31 +3,31 @@ To review the existing templates available to your organization:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Documents, select **Templates**.
+1. Under Documents, select **Templates**.
 
-3. Select one of the tabs for the document type with the templates you want to view.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)] For example:
+1. Select one of the tabs for the document type with the templates you want to view:
 
-   - **Documentation**
-   - **Validation Report**
-   - **Ongoing Monitoring**
+   - **Documentation**^[[Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)]
+   - **Validation Report**^[[Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)]
+   - **Ongoing Monitoring**^[[Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)]
+   - **Custom**^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
-4. Select one of the available templates.
+1. Select one of the available templates to view information about the template.[^template-info]
 
-   On the page that opens, you can view information about the template, such as: 
+
+<!-- FOOTNOTES -->
+
+[^template-info]:
 
    - Template name
+   - Template version
    - Template type
    - Template description
    - Template owner
+   - Models using that specific template version
    - When that template was created
    - Models using that template
-   - Template version
-   - Models using that specific template version
-   - Template outline —
-      - Sections in the template and how they are structured
-      - Guidelines associated with each section
-      - Tests from the {{< var vm.developer >}} that feed into the template
-
+   - Template outline
 
 ::::
 
@@ -38,6 +38,6 @@ To review the existing templates available to your organization:
 
 1. Select one of the tabs for [the document type with the templates you want to view](/guide/templates/working-with-model-documents.qmd).
 
-1. Select one of the available templates.
+1. Select one of the available templates to view information about the template.
 
 ::::
