--- a/site/guide/templates/manage-document-templates.qmd
+++ b/site/guide/templates/manage-document-templates.qmd
@@ -41,8 +41,13 @@ View templates applied to model documents or swap between templates or template 
 
 4. Select the document you want to view the template for:
 
-   - Click **{{< fa magnifying-glass >}} Search** to search for a specific document by keyword.
-   - Click **{{< fa arrow-up-wide-short >}} Sort** to reorder the list of documents using different criteria.
+   - Click **{{< fa magnifying-glass >}} Search** to search for a specific document by keyword in the document title.
+   - Click **{{< fa arrow-up-wide-short >}} Sort** to reorder the list of documents using different criteria in ascending or descending order.[^4]
+
+   ::: {.callout title="Note that searching and sorting of fields stack."}
+   For example, if you first search by keyword for `date` without clearing that search, any additional sorting applied will only apply to the results returned by that initial search.
+
+   :::
 
 5. On your document's detail page, locate [document template]{.smallcaps}.
 
@@ -81,4 +86,9 @@ d. Click **Apply Changes to Template** to complete the swap.
 
 [^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
+[^4]:
 
+   - **[title]{.smallcaps}** — Sort by title alphabetically.
+   - **[type]{.smallcaps}** — Sort by document type alphabetically.
+   - **[date created]{.smallcaps}** — Sort by creation date.
+   - **[date updated]{.smallcaps}** — Sort by last update date.
