--- a/site/guide/model-documentation/collaborate-with-others.qmd
+++ b/site/guide/model-documentation/collaborate-with-others.qmd
@@ -6,15 +6,15 @@ aliases:
   - /guide/collaborate-with-others.html
 ---
 
-Use the real-time collaboration features to track changes, add comments, and access the revision history for model documentation and validation reports.
+Use the real-time collaboration features to track changes, add comments, and access the revision history for model documents.
 
 ## Feature highlights
 
-- **Real-time collaboration** — Simultaneously edit model documentation, leave and respond to comments and suggestions, and access revision history. Changes to model documentation are also automatically added to {{< var vm.product >}}'s activity feed.
+- **Real-time collaboration** — Simultaneously edit model documents, leave and respond to comments and suggestions, and access revision history. Changes to model documents are also automatically added to {{< var vm.product >}}'s activity feed.
 
 - **Spell and grammar checker** — Have your content checked automatically by the built-in spell and grammar checker. 
 
-- **Math formulas** — Add math formulas to documentation by clicking the **MathType** button and using the toolbar, or switch to handwriting.
+- **Math formulas** — Add math formulas to documents by clicking the **MathType** button and using the toolbar, or switch to handwriting.
 
 ::: {.attn}
 
@@ -29,13 +29,13 @@ Use the real-time collaboration features to track changes, add comments, and acc
 
 ## Tracking changes
 
-While working with content blocks in documentation,[^4] you can suggest changes instead of editing the text directly.
+While working with content blocks in documents,[^4] you can suggest changes instead of editing the text directly.
 
 ### Suggest a change
 
 1. Click the **{{< fa file-pen >}} Track changes** button in the toolbar to turn on suggestion mode.
 
-2. Make your changes to the model documentation. 
+2. Make your changes to the model document. 
 
     When changes tracking is enabled, other contributors can accept or decline the suggested changes.
 
@@ -55,7 +55,7 @@ While working with content blocks in documentation,[^4] you can suggest changes 
 
 ## Revision history
 
-While working with content blocks in documentation,[^5] you can save named versions of your edits to retain specific revisions you'd like to keep. 
+While working with content blocks in documents,[^5] you can save named versions of your edits to retain specific revisions you'd like to keep. 
 
 1. Click the **{{< fa clock-rotate-left >}} Revision history** button in the toolbar.
 
