--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -5,11 +5,11 @@ aliases:
   - /guide/work-with-content-blocks.html
 ---
 
-Make edits to your model documentation, validation reports, or ongoing monitoring plans by adding or removing content blocks directly in the online editor.
+Make edits to your model documents by adding or removing content blocks directly in the online editor.
 
 ## What are content blocks?
 
-Content blocks provide you with sections that are part of a template, and are used in model documentation, validation reports, and ongoing monitoring plans.
+Content blocks provide you with sections that are part of a template, and are used in model documents.
 
 - You can think of these sections as an empty canvas that you fill in with text and test results.
 - Multiple sections are joined to create a longer document with a table of contents that has different heading and subheading levels, such as "1.," "1.1.," and so on.
@@ -98,7 +98,7 @@ While editing a simple text block, you can have {{< var vm.product >}} assist yo
 
 {{< include content_blocks/_generate-with-ai.qmd >}}
 
-When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^11] just like other updates to your documentation, reports, or plans.
+When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^11] just like other updates to your documents.
 
 ## Remove content blocks
 
@@ -110,7 +110,7 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 2. Select a model or find your model by applying a filter or searching for it.[^12]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.[^13]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document file.[^13]
 
 4. Click on a section header to expand that section and remove content.
 
