--- a/site/guide/monitoring/enable-monitoring.qmd
+++ b/site/guide/monitoring/enable-monitoring.qmd
@@ -81,7 +81,7 @@ Before you can start sending ongoing monitoring data from your developer environ
 
 2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Monitoring type file.[^6]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select an Ongoing Monitoring type file.[^6]
 
 4. From the **[template]{.smallcaps}** drop-down, select one of the available monitoring templates. 
 
