--- a/site/guide/reporting/export-documentation.qmd
+++ b/site/guide/reporting/export-documentation.qmd
@@ -63,19 +63,19 @@ Export your model documentation, validation reports, and ongoing monitoring docu
 
 2. Select a model or find your model by applying a filter or searching for it.[^10]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Monitoring type file.^
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select an Ongoing Monitoring type file.[^11]
 
 4. In right sidebar, click **{{< fa download >}} Export Document**.
 
-    Configure whether or not comments[^11] left on your document should be exported in your document.
+    Configure whether or not comments[^12] left on your document should be exported in your document.
 
 5. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
 ## What's next
 
-* [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
-* [Collaborate on documentation](/guide/model-documentation/collaborate-with-others.qmd)
-* [Submit for approval](/guide/model-documentation/submit-for-approval.qmd)
+- [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+- [Collaborate on documentation](/guide/model-documentation/collaborate-with-others.qmd)
+- [Submit for approval](/guide/model-documentation/submit-for-approval.qmd)
 
 
 <!-- FOOTNOTES -->
@@ -100,4 +100,6 @@ Export your model documentation, validation reports, and ongoing monitoring docu
 
 [^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^11]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
+[^11]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
+[^12]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
