--- a/site/guide/monitoring/review-monitoring-results.qmd
+++ b/site/guide/monitoring/review-monitoring-results.qmd
@@ -35,7 +35,7 @@ For results to be present and available for review, ongoing monitoring must be e
 
 2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Monitoring type file.[^6]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select an Ongoing Monitoring type file.[^6]
    
     - Explore the different sections of the template and review the results.
     - Any deviations from the expected performance should be identified and acted on if necessary.
