Editing: sorting & filtering pt1

--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -14,6 +14,10 @@ Content blocks provide you with sections that are part of a template, and are us
 - You can think of these sections as an empty canvas that you fill in with text and test results.
 - Multiple sections are joined to create a longer document with a table of contents that has different heading and subheading levels, such as "1.," "1.1.," and so on.
 
+::: {.callout}
+Content blocks can only be added to documents that are not uploaded PDFs.
+:::
+
 #### Content block types
 
 Content blocks can be new, blank blocks, or prepopulated via your library of logged test or metric results and text block templates:
