--- a/site/guide/model-inventory/working-with-model-inventory.qmd
+++ b/site/guide/model-inventory/working-with-model-inventory.qmd
@@ -34,12 +34,17 @@ Get started with the {{< var vm.product >}} inventory, which tracks comprehensiv
 Changes are automatically saved and will affect only your account.
 :::
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**. 
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 2. Use the top buttons to narrow down models and organize the model inventory to your preference:
-   - **{{< fa magnifying-glass >}} Search** — Search for models using keywords.
-   - **{{< fa filter >}} Filter** — Filter models by business units, developers, model tiering, model status, owners, use case, validators, or whether or not a model is a vendor model.
-   - **{{< fa arrow-up-wide-short >}} Sort** — Sort results by different criteria such as name, business unit, use case, version, tier, status, creation date, or vendor name.
+   - **{{< fa magnifying-glass >}} Search** — Search for models using keywords in the model name.
+   - **{{< fa filter >}} Filter** — Filter models using different criteria.[^2]
+   - **{{< fa arrow-up-wide-short >}} Sort** — Reorder the list using different criteria in ascending or descending order.[^3]
+
+::: {.callout title="Note that searching, filtering, and sorting of fields stack."}
+For example, if you first search by keyword for `ValidMind` without clearing that search, any additional filtering and sorting applied will only apply to the results returned by the previous criteria.
+
+:::
 
 ## What's next
 
@@ -50,3 +55,26 @@ Changes are automatically saved and will affect only your account.
 <!-- FOOTNOTES -->
 
 [^1]: [Register models in the inventory](register-models-in-inventory.qmd)
+
+[^2]:
+
+- [**[business units]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
+- [**[developers]{.smallcaps}**](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
+- **[model tiering]{.smallcaps}**
+- [**[model stage]{.smallcaps}**](/guide/model-workflows/manage-model-stages.qmd)
+- [**[owners]{.smallcaps}**](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
+- [**[use]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-use-cases)
+- [**[validators]{.smallcaps}**](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
+- [**[vendor model]{.smallcaps}**]((/about/glossary/glossary.qmd#vendor-model))
+
+[^3]:
+
+- **[name]{.smallcaps}**
+- [**[business unit]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
+- [**[use]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-use-cases)
+- **[tier]{.smallcaps}**
+- [**[stage]{.smallcaps}**](/guide/model-workflows/manage-model-stages.qmd)
+- **[creation date]{.smallcaps}**
+- [**[vendor name]{.smallcaps}**](/about/glossary/glossary.qmd#vendor-model)
+- **[updated date]{.smallcaps}**
+- [**[documentation updated date]{.smallcaps}**](/guide/model-documentation/working-with-model-documentation.qmd)
