--- a/site/guide/templates/manage-document-templates.qmd
+++ b/site/guide/templates/manage-document-templates.qmd
@@ -41,11 +41,11 @@ View templates applied to model documents or swap between templates or template 
 
 4. Select the document you want to view the template for:
 
-   - Click **{{< fa magnifying-glass >}} Search** to search for a specific document by keyword in the document title.
-   - Click **{{< fa arrow-up-wide-short >}} Sort** to reorder the list of documents using different criteria in ascending or descending order.[^4]
+   - Click **{{< fa magnifying-glass >}} Search** to search for documents by keywords in the document title.
+   - Click **{{< fa arrow-up-wide-short >}} Sort** to reorder the list using different criteria in ascending or descending order.[^4]
 
    ::: {.callout title="Note that searching and sorting of fields stack."}
-   For example, if you first search by keyword for `date` without clearing that search, any additional sorting applied will only apply to the results returned by that initial search.
+   For example, if you first search by keyword for `ValidMind` without clearing that search, any additional sorting applied will only apply to the results returned by that initial search.
 
    :::
 
