--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -52,11 +52,11 @@ For example, if you first search by keyword for `date` under **Title** without c
 
 #### Search fields
 
-a. Click **{{< fa magnifying-glass >}} Search** to search by keyword within an inventory field.
+a. Click **{{< fa magnifying-glass >}} Search** to search by keywords within an inventory field.
 
 b. Select whether to search in the **Title** or **Description**.
 
-c. Click **Search** to narrow down your results by your entered keyword.
+c. Click **Search** to narrow down your results by your entered keywords.
 
 
 #### Filter fields
