Editing: sorting & filtering pt2

--- a/site/guide/model-inventory/customize-model-inventory-layout.qmd
+++ b/site/guide/model-inventory/customize-model-inventory-layout.qmd
@@ -48,14 +48,11 @@ In addition to sorting and filtering the inventory,[^3] you can add or remove co
 
 2. Click **{{< fa table >}} Manage Columns**. To use this feature, make sure you're in table view.
 
-   You can toggle visibility for each item and drag each option to change the order:
+  - Search for a column name in the list to narrow down results.
+  - Toggle visibility for each item and drag each option to change the order.
+  - Available columns are determined by your model inventory fields.[^5]
 
-   ![Manage Columns in the model inventory](manage-columns-demo.gif){width=90% fig-alt="An animation that shows how to manage columns in the model inventory" .screenshot}
-
-    - Available columns are determined by your model inventory fields.[^5] 
-    - For example, to add model stage to your table view, toggle [stage]{.smallcaps}.[^6]
-
-Once customized, you can save a view for later application.[^7]
+Once customized, you can save a view for later application.[^6]
 
 ### Manage custom inventory views
 
@@ -69,9 +66,9 @@ Saved views are unique to you and do not display for other users in your organiz
 
 You can save custom table configurations as a view to reapply at any time:
 
-1. Customize a table view.[^8]
+1. Customize a table view.[^7]
 
-    You can also apply filters or sorting before saving your view to include them in the view.[^9]
+    You can also apply filters or sorting before saving your view to include them in the view.[^8]
 
 {{< include _save-layout-view.qmd >}}
 
@@ -105,10 +102,8 @@ Deletion of saved views is permanent.
 
 [^5]: [Manage model inventory fields](manage-model-inventory-fields.qmd)
 
-[^6]: [Manage model stages](/guide/model-workflows/manage-model-stages.qmd)
+[^6]: [Manage custom inventory views](#manage-custom-inventory-views)
 
-[^7]: [Manage custom inventory views](#manage-custom-inventory-views)
+[^7]: [Customize table view](#customize-table-view)
 
-[^8]: [Customize table view](#customize-table-view)
-
-[^9]: [Working with the model inventory](working-with-model-inventory.qmd)
+[^8]: [Working with the model inventory](working-with-model-inventory.qmd)
