--- a/site/guide/model-validation/view-filter-model-findings.qmd
+++ b/site/guide/model-validation/view-filter-model-findings.qmd
@@ -80,22 +80,17 @@ To narrow down the findings, you can apply some filters:
 
 2. Click **{{< fa filter >}} Filter**.
 
-3. On the **Select Your Filters** dialog that opens, enter your filtering criteria for:
+3. On the **Select Your Filters** dialog that opens, enter your filtering criteria.[^6]
 
-   - [status]{.smallcaps}
-   - [model inventory]{.smallcaps}
-   - [risk area]{.smallcaps}
-   - [business units]{.smallcaps}
-   - [severity]{.smallcaps}
-   - [assigned to]{.smallcaps}
+   For example, to filter by open findings for the Customer Churn Model assigned to Jane Doe:
 
-   For example, to filter by open findings for the `Customer Churn Model` assigned to `Jane Doe`:
-
-   ![Filter dialog with some options selected](filter.png){fig-alt="A screenshot of the filter dialog with some options selected" .screenshot}
+      - **[status]{.smallcaps}** — `Open`
+      - **[model inventory]{.smallcaps}** — `Customer Churn Model`
+      - **[assigned to]{.smallcaps}** — `Jane Doe`
 
 4. Click **Apply Filters**.
 
-Filters can be removed by clicking on the {{< fa xmark >}} next to them on the main **{{< fa triangle-exclamation >}} Findings** page where the results are displayed. 
+Filters can be removed by clicking on the {{< fa xmark >}} next to them on the main **{{< fa triangle-exclamation >}} Findings** page where the results are displayed.
 
 ## Customize model findings layout
 
@@ -109,11 +104,11 @@ Customize what is displayed on your list of all model findings:
 
 2. Click **{{< fa table >}} Manage Columns**.
 
-   You can toggle visibility for each item and drag each option to change the order:
+   - Search for a column name in the list to narrow down results.
+   - Toggle visibility for each item and drag each option to change the order.
+   - Available columns are determined by your model finding fields.[^7]
 
-   ![Manage Columns on all Findings](manage-finding-columns-demo.gif){width=40% fig-alt="An animation that shows how to manage columns on all model findings" .screenshot}
-
-Once customized, you can save a view for later application.[^6]
+Once customized, you can save a view for later application.[^8]
 
 ### Manage custom findings views
 
@@ -127,9 +122,9 @@ Saved views are unique to you and do not display for other users in your organiz
 
 You can save custom findings configuration as a view to reapply at any time:
 
-1. Customize a findings layout.[^7]
+1. Customize a findings layout.[^9]
 
-   You can also apply filters or sorting before saving your view to include them in the view.[^8]
+   You can also apply filters or sorting before saving your view to include them in the view.[^10]
 
 {{< include /guide/model-inventory/_save-layout-view.qmd >}}
 
@@ -158,8 +153,19 @@ Deletion of saved views is permanent.
 
 [^5]: [Manage supporting documentation](add-manage-model-findings.qmd#manage-supporting-documentation)
 
-[^6]: [Manage custom findings views](#manage-custom-findings-views)
+[^6]:
 
-[^7]: [Customize model findings layout](#customize-model-findings-layout)
+   - [**[status]{.smallcaps}**](/guide/model-validation/manage-finding-statuses.qmd)
+   - [**[model inventory]{.smallcaps}**](/guide/model-inventory/working-with-model-inventory.qmd)
+   - [**[risk area]{.smallcaps}**](/guide/model-validation/manage-validation-guidelines.qmd#set-up-validation-guidelines)
+   - [**[business units]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
+   - **[severity]{.smallcaps}**
+   - **[assigned to]{.smallcaps}**
 
-[^8]: [Filter and sort model findings](#filter-and-sort-model-findings)
+[^7]: [Manage model finding fields](manage-model-finding-fields.qmd)
+
+[^8]: [Manage custom findings views](#manage-custom-findings-views)
+
+[^9]: [Customize model findings layout](#customize-model-findings-layout)
+
+[^10]: [Filter and sort model findings](#filter-and-sort-model-findings)
