--- a/site/guide/model-inventory/working-with-model-inventory.qmd
+++ b/site/guide/model-inventory/working-with-model-inventory.qmd
@@ -65,7 +65,7 @@ For example, if you first search by keyword for `ValidMind` without clearing tha
 - [**[owners]{.smallcaps}**](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
 - [**[use]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-use-cases)
 - [**[validators]{.smallcaps}**](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
-- [**[vendor model]{.smallcaps}**]((/about/glossary/glossary.qmd#vendor-model))
+- [**[vendor model]{.smallcaps}**](/about/glossary/glossary.qmd#vendor-model)
 
 [^3]:
 
