Editing: Work with test results

--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -15,7 +15,7 @@ aliases:
   - /guide/model-documentation/check-documents-for-compliance.html
 ---
 
-Use the {{< var validmind.checker >}} to analyze your completed documentation by comparing it against regulatory standards. 
+Use the {{< var validmind.checker >}} to analyze your completed model documentation by comparing it against regulatory standards. 
 
 ## What is the {{< var validmind.checker >}}?
 
