--- a/site/guide/model-documentation/work-with-test-results.qmd
+++ b/site/guide/model-documentation/work-with-test-results.qmd
@@ -5,7 +5,7 @@ aliases:
   - /developer/model-documentation/work-with-test-results.html
 ---
 
-Once generated via the {{< var validmind.developer >}}, view and add the test results to your documentation in the {{< var validmind.platform >}}.
+Once generated via the {{< var validmind.developer >}}, view and add the test results to your model documentation in the {{< var validmind.platform >}}.
 
 ::: {.attn}
 
@@ -20,14 +20,28 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
 ## Add test results
 
-{{< include /guide/model-documentation/_add-content-blocks.qmd >}}
+<!-- CAN'T ADD TEST RESULTS TO ANYTHING BUT MODEL DOCUMENTATION, VALIDATION REPORTS, OR ONGOING MONITORING REPORTS CURRENTLY -->
 
-5. Click {{< fa square-plus >}} and then select **Test-Driven**[^3] under [from library]{.smallcaps}.
+<!-- {{< include /guide/model-documentation/_add-content-blocks.qmd >}} -->
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model or find your model by applying a filter or searching for it.[^3]
+
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation, Validation Report, or Ongoing Monitoring type file.[^4]
+
+4. Click on a section header to expand that section and add content.
+
+5. Hover your mouse over the space where you want your new block to go until a horizontal line with a {{< fa square-plus >}} sign appears that indicates you can insert a new block:
+
+    ![Adding a content block in the {{< var validmind.platform >}}](add-content-block.gif){width=90% fig-alt="A gif showing the process of adding a content block in the ValidMind Platform" .screenshot}
+
+6. Click {{< fa square-plus >}} and then select **Test-Driven**[^5] under [from library]{.smallcaps}.
 
     - By default, the [{{< fa code >}} Developer]{.bubble} role can add test-driven blocks within model documentation or ongoing-monitoring plans.
-    - By default, the [{{< fa circle-check >}} Validator]{.bubble} role can add test-driven blocks within validation reports. 
+    - By default, the [{{< fa circle-check >}} Validator]{.bubble} role can add test-driven blocks within validation reports.
 
-6. Select test results:
+7. Select test results:
 
    - Choose from available **VM Library** (out-of-the-box) or **Custom** tests under [test-driven]{.smallcaps} in the left sidebar of the test selection modal.
    - Use **{{<fa magnifying-glass >}} Search by name** on the top-left to locate specific test results.
@@ -36,9 +50,9 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
    To preview what is included in a test, click on it. By default, the actively selected test is reviewed.
 
-7. Click **Insert # Test Results to Document** when you are ready.
+8. Click **Insert # Test Results to Document** when you are ready.
 
-8. After inserting the results into your document, click on the text to make changes or add comments,[^4] or configure what is displayed on the test result.[^5]
+9. After inserting the results into your document, click on the text to make changes or add comments,[^6] or configure what is displayed on the test result.[^7]
 
 ### Configure test result displays
 
@@ -46,7 +60,7 @@ Once added to your model documentation, validation reports, and ongoing monitori
 
 1. Locate the test result whose display you want to configure, and hover over it until the result block's toolbar appears in the top right-hand corner.
 
-2. Select **{{< fa gear >}} Configure** and toggle the following options on or off as desired:[^6]
+2. Select **{{< fa gear >}} Configure** and toggle the following options on or off as desired:[^8]
 
     - **[hide title]{.smallcaps}** — Title
     - **[hide text]{.smallcaps}** — Description
@@ -60,9 +74,9 @@ Once added to your model documentation, validation reports, and ongoing monitori
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^7]
+2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^9]
 
-3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation, Validation Report, or Ongoing Monitoring type file.[^10]
 
 {{< include /guide/model-documentation/_view-test-result-metadata.qmd >}}
 
@@ -103,13 +117,17 @@ Filters can be removed from the list of test result metadata by clicking on the 
 
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^3]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
+[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^4]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
+[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^5]: [Configure test result displays](#configure-test-result-displays)
+[^5]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
 
-[^6]:
+[^6]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
+
+[^7]: [Configure test result displays](#configure-test-result-displays)
+
+[^8]:
 
     ::: {.callout}
     ## Options displayed for each test result will depend on what was logged via the {{< var validmind.developer >}} for your test.
@@ -120,4 +138,6 @@ Filters can be removed from the list of test result metadata by clicking on the 
 
     :::
 
-[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^9]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^10]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
