Editing: Work with metrics over time

--- a/site/guide/monitoring/work-with-metrics-over-time.qmd
+++ b/site/guide/monitoring/work-with-metrics-over-time.qmd
@@ -36,7 +36,7 @@ Learn how to log metrics over time, set thresholds, and analyze model performanc
 
 2. Select a model or find your model by applying a filter or searching for it.[^3]
 
-3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation** or **{{< fa desktop >}} Ongoing Monitoring**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation or Ongoing Monitoring type file.[^4]
 
 4. Click on a section header to expand that section and add content.
 
@@ -44,7 +44,7 @@ Learn how to log metrics over time, set thresholds, and analyze model performanc
 
     ![Adding a content block in the UI](/guide/model-documentation/add-content-block.gif){fig-alt="A gif showing the process of adding a content block in the UI" .screenshot}
 
-6.  Click {{< fa square-plus >}} and then select **Metric Over Time**[^4] under [from library]{.smallcaps}.
+6.  Click {{< fa square-plus >}} and then select **Metric Over Time**[^5] under [from library]{.smallcaps}.
 
     By default, only the [{{< fa code >}} Developer]{.bubble} role can add metrics over time within model documentation or ongoing monitoring plans.
 
@@ -75,9 +75,9 @@ After you have added metrics over time to your document, you can view the follow
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^5]
+2. Select a model or find your model by applying a filter or searching for it.[^6]
 
-3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation** or **{{< fa desktop >}} Ongoing Monitoring**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation or Ongoing Monitoring type file.[^7]
 
 4. Locate the metric whose metadata you want to view.
 
@@ -102,6 +102,10 @@ After you have added metrics over time to your document, you can view the follow
 
 [^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^4]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
+[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^5]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
+
+[^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^7]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
