--- a/site/guide/model-documentation/work-with-test-results.qmd
+++ b/site/guide/model-documentation/work-with-test-results.qmd
@@ -12,8 +12,9 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] Test results have already been documented via the {{< var validmind.developer >}} for your model.[^1]
-- [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
+- [x] The model you want to attach test results to is registered in the model inventory.[^1]
+- [x] Test results have already been documented via the {{< var validmind.developer >}} for your model.[^2]
+- [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
 
 :::
 
@@ -26,9 +27,9 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^3]
+2. Select a model or find your model by applying a filter or searching for it.[^4]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation, Validation Report, or Ongoing Monitoring type file.[^4]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation, Validation Report, or Ongoing Monitoring type file.[^5]
 
 4. Click on a section header to expand that section and add content.
 
@@ -36,7 +37,7 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
     ![Adding a content block in the {{< var validmind.platform >}}](add-content-block.gif){width=90% fig-alt="A gif showing the process of adding a content block in the ValidMind Platform" .screenshot}
 
-6. Click {{< fa square-plus >}} and then select **Test-Driven**[^5] under [from library]{.smallcaps}.
+6. Click {{< fa square-plus >}} and then select **Test-Driven**[^6] under [from library]{.smallcaps}.
 
     - By default, the [{{< fa code >}} Developer]{.bubble} role can add test-driven blocks within model documentation or ongoing-monitoring plans.
     - By default, the [{{< fa circle-check >}} Validator]{.bubble} role can add test-driven blocks within validation reports.
@@ -52,7 +53,7 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
 8. Click **Insert # Test Results to Document** when you are ready.
 
-9. After inserting the results into your document, click on the text to make changes or add comments,[^6] or configure what is displayed on the test result.[^7]
+9. After inserting the results into your document, click on the text to make changes or add comments,[^7] or configure what is displayed on the test result.[^8]
 
 ### Configure test result displays
 
@@ -60,7 +61,7 @@ Once added to your model documentation, validation reports, and ongoing monitori
 
 1. Locate the test result whose display you want to configure, and hover over it until the result block's toolbar appears in the top right-hand corner.
 
-2. Select **{{< fa gear >}} Configure** and toggle the following options on or off as desired:[^8]
+2. Select **{{< fa gear >}} Configure** and toggle the following options on or off as desired:[^9]
 
     - **[hide title]{.smallcaps}** — Title
     - **[hide text]{.smallcaps}** — Description
@@ -74,9 +75,9 @@ Once added to your model documentation, validation reports, and ongoing monitori
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^9]
+2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^10]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation, Validation Report, or Ongoing Monitoring type file.[^10]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation, Validation Report, or Ongoing Monitoring type file.[^11]
 
 {{< include /guide/model-documentation/_view-test-result-metadata.qmd >}}
 
@@ -113,21 +114,23 @@ Filters can be removed from the list of test result metadata by clicking on the 
 
 <!-- FOOTNOTES -->
 
-[^1]: [{{< var validmind.developer >}}](/developer/validmind-library.qmd)
+[^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^2]: [{{< var validmind.developer >}}](/developer/validmind-library.qmd)
 
-[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^5]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
+[^5]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^6]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
+[^6]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
 
-[^7]: [Configure test result displays](#configure-test-result-displays)
+[^7]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
 
-[^8]:
+[^8]: [Configure test result displays](#configure-test-result-displays)
+
+[^9]:
 
     ::: {.callout}
     ## Options displayed for each test result will depend on what was logged via the {{< var validmind.developer >}} for your test.
@@ -138,6 +141,6 @@ Filters can be removed from the list of test result metadata by clicking on the 
 
     :::
 
-[^9]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^10]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^11]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
