--- a/site/guide/model-validation/_link-findings-to-reports.qmd
+++ b/site/guide/model-validation/_link-findings-to-reports.qmd
@@ -24,7 +24,7 @@
 :::: {.content-hidden unless-format="revealjs"}
 1. Select a model or [find your model by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a [Validation Report type file](/guide/templates/working-with-model-documents.qmd).
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a [Validation Report type file](/guide/templates/working-with-model-documents.qmd){target="blank"}.
 
    Expand any subsection of the validation report you would like to work with.
 
