--- a/site/guide/templates/_duplicate-template.qmd
+++ b/site/guide/templates/_duplicate-template.qmd
@@ -30,7 +30,7 @@ To duplicate an existing template and start with version one of that new templat
 
 1. Under Documents, select **Templates**.
 
-1. Select one of the tabs for the [type of template you want to duplicate](/guide/templates/working-with-model-documents.qmd).
+1. Select one of the tabs for the [type of template you want to duplicate](/guide/templates/working-with-model-documents.qmd){target="blank"}.
 
 1. Click on the template to duplicate and on the template details page, select **{{< fa copy >}} Duplicate Template**. 
 
