--- a/site/guide/templates/_view-document-templates.qmd
+++ b/site/guide/templates/_view-document-templates.qmd
@@ -36,7 +36,7 @@ To review the existing templates available to your organization:
 
 1. Under Documents, select **Templates**.
 
-1. Select one of the tabs for [the document type with the templates you want to view](/guide/templates/working-with-model-documents.qmd).
+1. Select one of the tabs for [the document type with the templates you want to view](/guide/templates/working-with-model-documents.qmd){target="blank"}.
 
 1. Select one of the available templates to view information about the template.
 
