--- a/site/guide/monitoring/work-with-metrics-over-time.qmd
+++ b/site/guide/monitoring/work-with-metrics-over-time.qmd
@@ -25,8 +25,9 @@ Learn how to log metrics over time, set thresholds, and analyze model performanc
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] Metrics over time have already been logged via the {{< var validmind.developer >}} for your model.[^1]
-- [x] You are a [{{< fa code >}} Developer]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
+- [x] The model you want to log metrics over time for is registered in the inventory.[^1]
+- [x] Metrics over time have already been logged via the {{< var validmind.developer >}} for your model.[^2]
+- [x] You are a [{{< fa code >}} Developer]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
 
 :::
 
@@ -34,9 +35,9 @@ Learn how to log metrics over time, set thresholds, and analyze model performanc
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^3]
+2. Select a model or find your model by applying a filter or searching for it.[^4]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation or Ongoing Monitoring type file.[^4]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation or Ongoing Monitoring type file.[^5]
 
 4. Click on a section header to expand that section and add content.
 
@@ -44,7 +45,7 @@ Learn how to log metrics over time, set thresholds, and analyze model performanc
 
     ![Adding a content block in the UI](/guide/model-documentation/add-content-block.gif){fig-alt="A gif showing the process of adding a content block in the UI" .screenshot}
 
-6.  Click {{< fa square-plus >}} and then select **Metric Over Time**[^5] under [from library]{.smallcaps}.
+6.  Click {{< fa square-plus >}} and then select **Metric Over Time**[^6] under [from library]{.smallcaps}.
 
     By default, only the [{{< fa code >}} Developer]{.bubble} role can add metrics over time within model documentation or ongoing monitoring plans.
 
@@ -75,9 +76,9 @@ After you have added metrics over time to your document, you can view the follow
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^6]
+2. Select a model or find your model by applying a filter or searching for it.[^7]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation or Ongoing Monitoring type file.[^7]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation or Ongoing Monitoring type file.[^8]
 
 4. Locate the metric whose metadata you want to view.
 
@@ -96,16 +97,18 @@ After you have added metrics over time to your document, you can view the follow
 
 <!-- FOOTNOTES -->
 
-[^1]: [Log metrics over time](/notebooks/how_to/log_metrics_over_time.ipynb)
+[^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^2]: [Log metrics over time](/notebooks/how_to/log_metrics_over_time.ipynb)
 
-[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^5]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
+[^5]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^6]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
 
-[^7]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^8]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
