--- a/site/guide/templates/_customize-document-templates.qmd
+++ b/site/guide/templates/_customize-document-templates.qmd
@@ -51,7 +51,7 @@ Customize {{< var vm.product >}}'s templates for model documentation, validation
 
 1. Under Documents, select **Templates**.
 
-1. Select one of the tabs for the [type of template you want to edit](/guide/templates/working-with-model-documents.qmd).
+1. Select one of the tabs for the [type of template you want to edit](/guide/templates/working-with-model-documents.qmd){target="blank"}.
 
 1. Click the template to edit and on the template details page, select **{{< fa pencil >}} Edit Outline**. 
 
