Even more proofreading

--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -130,7 +130,7 @@ From the {{< var validmind.platform >}}:
 
 2. Select the name of your model you registered for this course to open up the model details page.
 
-3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Documentation**.
 
 {{< include /guide/model-documentation/_view-test-result-metadata.qmd >}}
 
@@ -146,7 +146,7 @@ From the {{< var validmind.platform >}}:
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+2. On the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Documentation**.
 3. Click into any section of the documentation to review the test results logged via the {{< var validmind.developer >}}. <br>For example:
     - **2.3 Correlations and Interactions**
     - **3.2 Model Evaluation**
@@ -212,7 +212,7 @@ For example:
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+2. On the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Documentation**.
 3. Click into any section of the documentation to add and edit a content block.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
@@ -264,7 +264,7 @@ Comment threads
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+2. On the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Documentation**.
 3. **In the content block you added earlier**: Post a comment, reply to it, and then resolve the thread.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
