--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -215,7 +215,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 Once you've called `preview_template()`:
 
 1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+2. On the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Documentation**.
 3. Note how the structure of the Document Overview reflects the previewed template.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
