--- a/site/guide/model-documentation/_locate-document-overview.qmd
+++ b/site/guide/model-documentation/_locate-document-overview.qmd
@@ -14,7 +14,7 @@ To locate your document overview for a model:
 
 1. Select a model or [find your model by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="blank"}.
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a [Documentation type file](/guide/templates/working-with-model-documents.qmd){target="blank"}.
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Documentation**.
 
 ::::
 
