--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -111,7 +111,7 @@ After you successfully run the notebook, return to the {{< var validmind.platfor
 
 2. Locate or search for the model you registered for this quickstart and click on it to select it.[^2]
 
-3. In the left sidebar that appears for the model, click **{{< fa shield >}} Validation Report**:
+3. In the left sidebar that appears for the model, click **{{< fa file >}} Documents** and select **Validation Report**:
 
    - Your model's validation is broken down into sections, defined by your validation report templates.[^3]
    - The report includes risk assessment summaries at the overall and per-section level, overviews of your compliance assessments provided within your validation report.[^4]
