--- a/site/releases/2024/2024-feb-14/highlights.qmd
+++ b/site/releases/2024/2024-feb-14/highlights.qmd
@@ -296,7 +296,7 @@ We implemented a toggle feature in the **{{< fa wifi >}} Model Activity** and Re
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-70-ns}
-- Forms in the **{{< fa triangle-exclamation >}} Model Findings** and **{{< fa shield >}} Validation Report** sections now support the rich-text editor interface found in the rest of our content blocks. 
+- Forms in the **{{< fa triangle-exclamation >}} Model Findings** and **Validation Report** sections now support the rich-text editor interface found in the rest of our content blocks. 
 - This support enables you to use the editor for your finding descriptions and remediation plans, for example. 
 :::
 
