--- a/site/releases/2025/2025-apr-24/release-notes.qmd
+++ b/site/releases/2025/2025-apr-24/release-notes.qmd
@@ -214,7 +214,7 @@ Labels: bug
 --->
 #### Improved table of contents navigation for model documentation
 
-Previously, users experienced non-optimal behavior with the table of contents sidebar for their model's **{{< fa book-open >}} Documentation** pages,[^6] such as being unable to scroll to reveal additional headings when the sections of the Document Outline exceeded the length of the visible page, and navigation that auto-collapsed counterintuitively.
+Previously, users experienced non-optimal behavior with the table of contents sidebar for their model's **Documentation** pages,[^6] such as being unable to scroll to reveal additional headings when the sections of the Document Outline exceeded the length of the visible page, and navigation that auto-collapsed counterintuitively.
 
 Now, users can scroll to reveal previously hidden table of contents headings via a fixed navigation sidebar.
 
