--- a/site/releases/2024/2024-may-22/release-notes.qmd
+++ b/site/releases/2024/2024-may-22/release-notes.qmd
@@ -210,7 +210,7 @@ Labels: enhancement, highlight
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-60-ns}
-We created a new **{{< fa book-open >}} Documentation** outline page which replaces the existing model overview page. 
+We created a new **Documentation** outline page which replaces the existing model overview page. 
 :::
 
 ::: {.w-40-ns .tc}
@@ -700,7 +700,7 @@ Labels: enhancement
 --->
 #### Documentation section statuses
 
-We added a status picker to each section of the model **{{< fa book-open >}} Documentation** page.  
+We added a status picker to each section of the model **Documentation** page.  
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -763,9 +763,9 @@ PR #712: Validation Report Overview
 URL: https://github.com/validmind/frontend/pull/712
 Labels: enhancement
 --->
-#### {{< fa shield >}} Validation Report overview page
+#### Validation Report overview page
 
-We created a new **{{< fa shield >}} Validation Report** overview page which shows a section-by-section outline of a model's validation report, including a total compliance summary for all risk areas associated with the model.
+We created a new **Validation Report** overview page which shows a section-by-section outline of a model's validation report, including a total compliance summary for all risk areas associated with the model.
 
 :::: {.flex .flex-wrap .justify-around}
 
